Got the basic action executing.  Still need to get the child processing working.  Also I am using strings instead of binary in the file format.  I may want to change it so I can better support json in the future but something to think about...

--- a/priv/actions.config
+++ b/priv/actions.config
@@ -3,12 +3,12 @@
 %% Used to simulate a user logging into the system
 %%=====================================================
 {[
-    {name, "login"},
-    {url, "login"},
-    {type, post},
+    {name, <<"login">>},
+    {url, "http://127.0.0.1:1337/login"},
+    {type, get},
     {args, [
-        {"username", "cjimison"},
-        {"password", "p$55w0r@"}
+        {"username", "foo"},
+        {"password", "bar"}
     ]},
     {results,[ 
         {"session", "$SESSION"}
@@ -22,16 +22,16 @@
 %% Get all the cards from the user
 %%=====================================================
 {[
-    {name, "get_cards"},
-    {url, "listcards"},
+    {name, <<"get_cards">>},
+    {url, <<"listcards">>},
     {type, get},
     {args, [
-        {"sesionID", "$SESSION"}
+        {<<"sesionID">>, <<"$SESSION">>}
     ]},
     {args_type, http}
     %% NOTE: I do not care about the results in this case
     %% But if you did you can save them off as such
-    %% {results,[ {"cards", "$SESSION"} ]},
+    %% {results,[ {<<"cards">>, <<"$CARDS">>} ]},
     %%{results_type, json}
 ]}.
 
