Childs are now processed in the tree

--- a/priv/actions.config
+++ b/priv/actions.config
@@ -23,15 +23,15 @@
 %%=====================================================
 {[
     {name, <<"get_cards">>},
-    {url, <<"listcards">>},
+    {url, "http://127.0.0.1:1337/listcards"},
     {type, get},
     {args, [
-        {<<"sesionID">>, <<"$SESSION">>}
+        {"sesionID", "$SESSION"}
     ]},
     {args_type, http}
     %% NOTE: I do not care about the results in this case
     %% But if you did you can save them off as such
-    %% {results,[ {<<"cards">>, <<"$CARDS">>} ]},
+    %% {results,[ {"cards", "$CARDS"} ]},
     %%{results_type, json}
 ]}.
 
