--- a/priv/behaviors.config
+++ b/priv/behaviors.config
@@ -4,12 +4,12 @@
 %%=====================================================
 {[
     {name, <<"Simple Test">>},
-    {tree, {[
+    {tree, [
         { action, <<"login">>},
         { children, [
             [{ action,<<"get_cards">>}, { children, []}]
         ]}
-    ]}}
+    ]}
 ]}.
 
 %%=====================================================
@@ -18,7 +18,7 @@
 %%=====================================================
 {[
     {name, <<"Random Commands">>},
-    {tree, {[
+    {tree, [
         { action, <<"login">>},
         { children, [
             { action, <<"random">> },
@@ -26,6 +26,6 @@
                 [{ action, <<"get_cards">>}]
             ]}
         ]}
-    ]}}
+    ]}
 ]}.
 
