Got the random timers and waiting behaviors working.  This is for the following issues <https://github.com/cjimison/barrage/issues/8> and <https://github.com/cjimison/barrage/issues/7>

--- a/priv/actions.config
+++ b/priv/actions.config
@@ -35,4 +35,30 @@
     %%{results_type, json}
 ]}.
 
+%%=====================================================
+%% Action: get_card_details
+%% Get all the cards from the user
+%%=====================================================
+{[
+    {name, <<"get_card_details">>},
+    {url, "http://127.0.0.1:1337/card"},
+    {type, get},
+    {args, [
+        {"cardID", "1234"}
+    ]},
+    {args_type, http}
+]}.
 
+%%=====================================================
+%% Action: add_card
+%% Get all the cards from the user
+%%=====================================================
+{[
+    {name, <<"add_card">>},
+    {url, "http://127.0.0.1:1337/card"},
+    {type, get},
+    {args, [
+        {"cardID", "1234"}
+    ]},
+    {args_type, http}
+]}.
