--- a/priv/behaviors.config
+++ b/priv/behaviors.config
@@ -21,10 +21,24 @@
     {tree, [
         { action, <<"login">>},
         { children, [
-            { action, <<"random">> },
-            { children, [
-                [{ action, <<"get_cards">>}]
-            ]}
+            [
+                { action, <<"random">> },
+                { children, [
+                    %[{ action, <<"wait">>}, {args, [{time, 1000}]}],
+                    %[{ action, <<"random_wait">>}, {args, [{time, 1000}]}],
+                    [
+                        {action, <<"random">>}, 
+                        { children, [
+                            [{ action, <<"add_card">>}],
+                            [{ action, <<"get_cards">>}]
+                        ]},
+                        {args, [{min_time, 5000}]}
+                    ]
+                    %[{ action, <<"get_cards">>}],
+                    %[{ action, <<"login">>}]
+                ]},
+                { args, [{count, 10}]}
+            ]
         ]}
     ]}
 ]}.
