Added the ordered action.  This is basically a sequence run of the child actions.  This with random should be a good building block for most things.  Closes issue <https://github.com/cjimison/barrage/issues/10>

--- a/priv/behaviors.config
+++ b/priv/behaviors.config
@@ -19,13 +19,15 @@
 {[
     {name, <<"Random Commands">>},
     {tree, [
-        { action, <<"login">>},
+        { action, <<"ordered">>},
+        { args, [{count, 3}]},
         { children, [
+            [{ action, <<"login">>}],
             [
                 { action, <<"random">> },
                 { children, [
-                    %[{ action, <<"wait">>}, {args, [{time, 1000}]}],
-                    %[{ action, <<"random_wait">>}, {args, [{time, 1000}]}],
+                    [{ action, <<"wait">>}, {args, [{time, 1000}]}],
+                    [{ action, <<"random_wait">>}, {args, [{time, 1000}]}],
                     [
                         {action, <<"random">>}, 
                         { children, [
@@ -33,9 +35,9 @@
                             [{ action, <<"get_cards">>}]
                         ]},
                         {args, [{min_time, 5000}]}
-                    ]
-                    %[{ action, <<"get_cards">>}],
-                    %[{ action, <<"login">>}]
+                    ],
+                    [{ action, <<"get_cards">>}],
+                    [{ action, <<"login">>}]
                 ]},
                 { args, [{count, 10}]}
             ]
