Working on getting the cluster part up and running.  I need to commit this code so I can work on two machines at once with the same code base.

--- a/priv/actions.config
+++ b/priv/actions.config
@@ -4,14 +4,14 @@
 %%=====================================================
 {[
     {name, <<"login">>},
-    {url, "http://127.0.0.1:1337/login"},
+    {url, <<"/login">>},
     {type, get},
     {args, [
-        {"username", "foo"},
-        {"password", "bar"}
+        {<<"username">>, <<"foo">>},
+        {<<"password">>, <<"bar">>}
     ]},
     {results,[ 
-        {"session", "$SESSION"}
+        {<<"session">>, <<"$SESSION">>}
     ]},
     {args_type, http},
     {results_type, json}
@@ -23,10 +23,10 @@
 %%=====================================================
 {[
     {name, <<"get_cards">>},
-    {url, "http://127.0.0.1:1337/listcards"},
+    {url, <<"/listcards">>},
     {type, get},
     {args, [
-        {"sesionID", "$SESSION"}
+        {<<"sesionID">>, <<"$SESSION">>}
     ]},
     {args_type, http}
     %% NOTE: I do not care about the results in this case
@@ -41,10 +41,10 @@
 %%=====================================================
 {[
     {name, <<"get_card_details">>},
-    {url, "http://127.0.0.1:1337/card"},
+    {url,  <<"/card">>},
     {type, get},
     {args, [
-        {"cardID", "1234"}
+        {<<"cardID">>, <<"1234">>}
     ]},
     {args_type, http}
 ]}.
@@ -55,10 +55,10 @@
 %%=====================================================
 {[
     {name, <<"add_card">>},
-    {url, "http://127.0.0.1:1337/card"},
+    {url,  <<"/card">>},
     {type, get},
     {args, [
-        {"cardID", "1234"}
+        {<<"cardID">>, <<"1234">>}
     ]},
     {args_type, http}
 ]}.
