--- a/priv/barrage.config
+++ b/priv/barrage.config
@@ -14,7 +14,7 @@
 %{[
 %    {type, commander},                      %% Options are general and commander
 %    {args, [
-%        {general, ur},                      %% Location of the general
+%        {general, 'general@10.0.1.4'},      %% Location of the general
 %        {gunners, 100}                      %% How many gunners I need to setup
 %    ]}
 %]}.
