--- a/priv/barrage.config
+++ b/priv/barrage.config
@@ -4,17 +4,17 @@
 {[
     {type, general},                        %% Options are general and commander
     {args, [
-        {url, <<"http://10.0.1.4:1337">>}  %% The server this general is going to attack
+        {url, <<"http://localhost:1337">>}  %% The server to attack
     ]}
 ]}.
 
 %%=====================================================
 %% Config: A version of the config for a commander 
 %%=====================================================
-%{[
-%    {type, commander},                      %% Options are general and commander
-%    {args, [
-%        {general, 'general@10.0.1.4'},      %% Location of the general
-%        {gunners, 100}                      %% How many gunners I need to setup
-%    ]}
-%]}.
+{[
+    {type, commander},                  %% Options are general and commander
+    {args, [
+        {general, 'general@localhost'}, %% Location of the general
+        {gunners, 100}                  %% How many gunners I need to setup
+    ]}
+]}.
