Basically got the reporting structure put into place.  I would like to also report number of failures vs success and also allow for more detailed drilling.  But maybe I will do this in the future. Fix for issue: <https://github.com/cjimison/barrage/issues/5>

--- a/priv/behaviors.config
+++ b/priv/behaviors.config
@@ -5,10 +5,7 @@
 {[
     {name, <<"Simple Test">>},
     {tree, [
-        { action, <<"login">>},
-        { children, [
-            [{ action,<<"get_cards">>}, { children, []}]
-        ]}
+        { action, <<"login">>}
     ]}
 ]}.
 
@@ -20,26 +17,26 @@
     {name, <<"Random Commands">>},
     {tree, [
         { action, <<"ordered">>},
-        { args, [{count, 3}]},
+        { args, [{count, 2}]},
         { children, [
             [{ action, <<"login">>}],
             [
                 { action, <<"random">> },
                 { children, [
-                    [{ action, <<"wait">>}, {args, [{time, 1000}]}],
-                    [{ action, <<"random_wait">>}, {args, [{time, 1000}]}],
+                    [{ action, <<"wait">>}, {args, [{time, 100}]}],
+                    [{ action, <<"random_wait">>}, {args, [{time, 100}]}],
                     [
                         {action, <<"random">>}, 
                         { children, [
                             [{ action, <<"add_card">>}],
                             [{ action, <<"get_cards">>}]
                         ]},
-                        {args, [{min_time, 5000}]}
+                        {args, [{min_time, 500}]}
                     ],
                     [{ action, <<"get_cards">>}],
                     [{ action, <<"login">>}]
                 ]},
-                { args, [{count, 10}]}
+                { args, [{count, 2}]}
             ]
         ]}
     ]}
