--- a/priv/actions.config
+++ b/priv/actions.config
@@ -5,7 +5,7 @@
 {[
     {name, <<"login">>},
     {url, <<"/login">>},
-    {type, get},
+    {type, post},
     {args, [
         {<<"username">>, <<"foo">>},
         {<<"password">>, <<"bar">>}
