Added some support for cookie based responses. Fixes issue: <https://github.com/cjimison/barrage/issues/6>

--- a/priv/behaviors.config
+++ b/priv/behaviors.config
@@ -10,6 +10,22 @@
 ]}.
 
 %%=====================================================
+%% Behavior: Cookie_Test
+%% This is a simple test that uses cookie
+%%=====================================================
+{[
+    {name, <<"Cookie Test">>},
+    {tree, [
+        { action, <<"ordered">>},
+        { args, [{count, 2}]},
+        { children, [
+            [{ action, <<"cookie">>}],
+            [{ action, <<"cookie2">>}]
+        ]}
+    ]}
+]}.
+
+%%=====================================================
 %% Behavior: Random Commands 
 %% This will go through a full assult of all the api's
 %%=====================================================
