--- a/priv/actions.config
+++ b/priv/actions.config
@@ -18,6 +18,32 @@
 ]}.
 
 %%=====================================================
+%% Action: Cookie
+%% Used to simulate a user logging into the system
+%%=====================================================
+{[
+    {name, <<"cookie">>},
+    {url, <<"/cookie">>},
+    {type, get},
+    {results,[ 
+        {<<"session">>, <<"$SESSION">>}
+    ]},
+    {args_type, http},
+    {results_type, json}
+]}.
+
+{[
+    {name, <<"cookie2">>},
+    {url, <<"/cookie2">>},
+    {type, get},
+    {results,[ 
+        {<<"session">>, <<"$SESSION">>}
+    ]},
+    {args_type, http},
+    {results_type, json}
+]}.
+
+%%=====================================================
 %% Action: get_cards
 %% Get all the cards from the user
 %%=====================================================
