Added some initial support but this is quickly turning into a mess.  I am just going to stick with erlang config files for now.

--- a/priv/behaviors.config
+++ b/priv/behaviors.config
@@ -4,9 +4,9 @@
 %%=====================================================
 {[
     {name, <<"Simple Test">>},
-    {tree, [
+    {tree, {[
         { action, <<"login">>}
-    ]}
+    ]}}
 ]}.
 
 %%=====================================================
@@ -15,14 +15,14 @@
 %%=====================================================
 {[
     {name, <<"Cookie Test">>},
-    {tree, [
+    {tree, {[
         { action, <<"ordered">>},
-        { args, [{count, 2}]},
+        { args, {[{count, 2}]}},
         { children, [
-            [{ action, <<"cookie">>}],
-            [{ action, <<"cookie2">>}]
+            {[{ action, <<"cookie">>}]},
+            {[{ action, <<"cookie2">>}]}
         ]}
-    ]}
+    ]}}
 ]}.
 
 %%=====================================================
@@ -33,26 +33,26 @@
     {name, <<"Random Commands">>},
     {tree, [
         { action, <<"ordered">>},
-        { args, [{count, 2}]},
+        { args, {[{count, 2}]}},
         { children, [
             [{ action, <<"login">>}],
             [
                 { action, <<"random">> },
                 { children, [
-                    [{ action, <<"wait">>}, {args, [{time, 100}]}],
-                    [{ action, <<"random_wait">>}, {args, [{time, 100}]}],
-                    [
+                    {[{ action, <<"wait">>}, {args, [{time, 100}]}]},
+                    {[{ action, <<"random_wait">>}, {args, {[{time, 100}]}}]},
+                    {[
                         {action, <<"random">>}, 
                         { children, [
-                            [{ action, <<"add_card">>}],
-                            [{ action, <<"get_cards">>}]
+                            {[{ action, <<"add_card">>}]},
+                            {[{ action, <<"get_cards">>}]}
                         ]},
-                        {args, [{min_time, 500}]}
-                    ],
-                    [{ action, <<"get_cards">>}],
-                    [{ action, <<"login">>}]
+                        {args, {[{min_time, 500}]}}
+                    ]},
+                    {[{ action, <<"get_cards">>}]},
+                    {[{ action, <<"login">>}]}
                 ]},
-                { args, [{count, 2}]}
+                { args, {[{count, 2}]}}
             ]
         ]}
     ]}
