got the basic interface working but still needs some love

--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,6 @@
 {sub_dirs, ["rel"]}.
 {deps, [
-        {jiffy, "", {git, "git://github.com/davisp/jiffy.git", {branch, "master"}}}
+        {jiffy, "", {git, "git://github.com/davisp/jiffy.git", {branch, "master"}}},
+        {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", "master"}},
+        {mimetypes, ".*", {git, "git://github.com/spawngrid/mimetypes.git", "master"}}
        ]}.
