got the basics working with ibrowse.  Now I just need to repair the damage done by fixing up cookies and supporting put and post requests.  I may also drop in delete support...

--- a/rebar.config
+++ b/rebar.config
@@ -2,5 +2,6 @@
 {deps, [
         {jiffy, "", {git, "git://github.com/davisp/jiffy.git", {branch, "master"}}},
         {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", "master"}},
-        {mimetypes, ".*", {git, "git://github.com/spawngrid/mimetypes.git", "master"}}
+        {mimetypes, ".*", {git, "git://github.com/spawngrid/mimetypes.git", "master"}},
+        {ibrowse, ".*", {git, "git://github.com/cmullaparthi/ibrowse.git", "master"}}
        ]}.
