Got the cookie's working but this system still is not working fast enough.

--- a/priv/actions.config
+++ b/priv/actions.config
@@ -23,22 +23,16 @@
 %%=====================================================
 {[
     {name, <<"cookie">>},
-    {url, <<"/cookie">>},
+    {url, <<"">>},
     {type, get},
-    {results,[ 
-        {<<"session">>, <<"$SESSION">>}
-    ]},
     {args_type, http},
     {results_type, json}
 ]}.
 
 {[
     {name, <<"cookie2">>},
-    {url, <<"/cookie2">>},
+    {url, <<"">>},
     {type, get},
-    {results,[ 
-        {<<"session">>, <<"$SESSION">>}
-    ]},
     {args_type, http},
     {results_type, json}
 ]}.
