--- a/priv/barrage.config
+++ b/priv/barrage.config
@@ -4,7 +4,7 @@
 {[
     {type, general},                        %% Options are general and commander
     {args, [
-        {url, <<"http://localhost:1337">>}  %% The server to attack
+        {url, <<"http://www.google.com">>}  %% The server to attack
     ]}
 ]}.
 
@@ -15,6 +15,6 @@
     {type, commander},                  %% Options are general and commander
     {args, [
         {general, 'general@localhost'}, %% Location of the general
-        {gunners, 100}                  %% How many gunners I need to setup
+        {gunners, 1}                  %% How many gunners I need to setup
     ]}
 ]}.
