--- a/priv/behaviors.config
+++ b/priv/behaviors.config
@@ -17,8 +17,13 @@
     {name, <<"Cookie Test">>},
     {tree, [
         { action, <<"ordered">>},
-        { args, [{count, 2}]},
+        { args, [{count, 1}]},
         { children, [
+            [{ action, <<"cookie">>}],
+            [{ action, <<"cookie">>}],
+            [{ action, <<"cookie">>}],
+            [{ action, <<"cookie">>}],
+            [{ action, <<"cookie">>}],
             [{ action, <<"cookie">>}],
             [{ action, <<"cookie2">>}]
         ]}
