Got JSON based config files now working.  This is mostly because the erlang.config files just confused people.  Should close issue https://github.com/cjimison/barrage/issues/14

--- a/priv/actions.config
+++ b/priv/actions.config
@@ -3,18 +3,18 @@
 %% Used to simulate a user logging into the system
 %%=====================================================
 {[
-    {name, <<"login">>},
-    {url, <<"/login">>},
-    {type, post},
-    {args, [
+    {<<"name">>, <<"login">>},
+    {<<"url">>, <<"/login">>},
+    {<<"type">>, <<"post">>},
+    {<<"args">>, {[
         {<<"username">>, <<"foo">>},
         {<<"password">>, <<"bar">>}
-    ]},
-    {results,[ 
+    ]}},
+    {<<"results">>,{[ 
         {<<"session">>, <<"$SESSION">>}
-    ]},
-    {args_type, http},
-    {results_type, json}
+    ]}},
+    {<<"args_type">>, <<"http">>},
+    {<<"results_type">>, <<"json">>}
 ]}.
 
 %%=====================================================
@@ -22,25 +22,25 @@
 %% Used to simulate a user logging into the system
 %%=====================================================
 {[
-    {name, <<"cookie">>},
-    {url, <<"/cookie">>},
-    {type, get},
-    {results,[ 
+    {<<"name">>, <<"cookie">>},
+    {<<"url">>, <<"/cookie">>},
+    {<<"type">>, <<"get">>},
+    {<<"results">>,{[ 
         {<<"session">>, <<"$SESSION">>}
-    ]},
-    {args_type, http},
-    {results_type, json}
+    ]}},
+    {<<"args_type">>, <<"http">>},
+    {<<"results_type">>, <<"json">>}
 ]}.
 
 {[
-    {name, <<"cookie2">>},
-    {url, <<"/cookie2">>},
-    {type, get},
-    {results,[ 
+    {<<"name">>, <<"cookie2">>},
+    {<<"url">>, <<"/cookie2">>},
+    {<<"type">>, <<"get">>},
+    {<<"results">>,{[ 
         {<<"session">>, <<"$SESSION">>}
-    ]},
-    {args_type, http},
-    {results_type, json}
+    ]}},
+    {<<"args_type">>, <<"http">>},
+    {<<"results_type">>, <<"json">>}
 ]}.
 
 %%=====================================================
@@ -48,13 +48,13 @@
 %% Get all the cards from the user
 %%=====================================================
 {[
-    {name, <<"get_cards">>},
-    {url, <<"/listcards">>},
-    {type, get},
-    {args, [
+    {<<"name">>, <<"get_cards">>},
+    {<<"url">>, <<"/listcards">>},
+    {<<"type">>, <<"get">>},
+    {<<"args">>, {[
         {<<"sesionID">>, <<"$SESSION">>}
-    ]},
-    {args_type, http}
+    ]}},
+    {<<"args_type">>, <<"http">>}
     %% NOTE: I do not care about the results in this case
     %% But if you did you can save them off as such
     %% {results,[ {"cards", "$CARDS"} ]},
@@ -66,13 +66,13 @@
 %% Get all the cards from the user
 %%=====================================================
 {[
-    {name, <<"get_card_details">>},
-    {url, <<"/get_card_details">>},
-    {type, get},
-    {args, [
+    {<<"name">>, <<"get_card_details">>},
+    {<<"url">>, <<"/get_card_details">>},
+    {<<"type">>, <<"get">>},
+    {<<"args">>, {[
         {<<"sesionID">>, <<"$SESSION">>}
-    ]},
-    {args_type, http}
+    ]}},
+    {<<"args_type">>, <<"http">>}
 ]}.
 
 %%=====================================================
@@ -80,11 +80,11 @@
 %% Get all the cards from the user
 %%=====================================================
 {[
-    {name, <<"add_card">>},
-    {url, <<"/add_card">>},
-    {type, get},
-    {args, [
+    {<<"name">>, <<"add_card">>},
+    {<<"url">>, <<"/add_card">>},
+    {<<"type">>, <<"get">>},
+    {<<"args">>, {[
         {<<"sesionID">>, <<"$SESSION">>}
-    ]},
-    {args_type, http}
+    ]}},
+    {<<"args_type">>, <<"http">>}
 ]}.
