--- a/priv/behaviors.config
+++ b/priv/behaviors.config
@@ -3,10 +3,10 @@
 %% This is a simple
 %%=====================================================
 {[
-    {name, <<"Simple Test">>},
-    {tree, [
-        { action, <<"login">>}
-    ]}
+    {<<"name">>, <<"Simple Test">>},
+    {<<"tree">>, {[
+        { <<"action">>, <<"login">>}
+    ]}}
 ]}.
 
 %%=====================================================
@@ -14,15 +14,15 @@
 %% This is a simple test that uses cookie
 %%=====================================================
 {[
-    {name, <<"Cookie Test">>},
-    {tree, [
-        { action, <<"ordered">>},
-        { args, [{count, 2}]},
-        { children, [
-            [{ action, <<"cookie">>}],
-            [{ action, <<"cookie2">>}]
+    {<<"name">>, <<"Cookie Test">>},
+    {<<"tree">>, {[
+        { <<"action">>, <<"ordered">>},
+        { <<"args">>, {[{<<"count">>, 2}]}},
+        { <<"children">>, [
+            {[{ <<"action">>, <<"cookie">>}]},
+            {[{ <<"action">>, <<"cookie2">>}]}
         ]}
-    ]}
+    ]}}
 ]}.
 
 %%=====================================================
@@ -30,22 +30,22 @@
 %% This will go through a full assult of all the api's
 %%=====================================================
 {[
-    {name, <<"Random Commands">>},
-    {tree, [
-        { action, <<"ordered">>},
-        { args, [{count, 1}]},
-        { children, [
-            [{ action, <<"login">>}],
-            [
-                { action, <<"random">>},
-                { children, [
-                    [{ action, <<"get_cards">>}],
-                    [{ action, <<"get_card_details">>}],
-                    [{ action, <<"add_card">>}]
+    {<<"name">>, <<"Random Commands">>},
+    {<<"tree">>, {[
+        { <<"action">>, <<"ordered">>},
+        { <<"args">>, {[{<<"count">>, 1}]}},
+        { <<"children">>, [
+            {[{ <<"action">>, <<"login">>}]},
+            {[
+                { <<"action">>, <<"random">>},
+                { <<"children">>, [
+                    {[{ <<"action">>, <<"get_cards">>}]},
+                    {[{ <<"action">>, <<"get_card_details">>}]},
+                    {[{ <<"action">>, <<"add_card">>}]}
                 ]},
-                { args, [{min_time, 10000}]}
-            ]
+                { <<"args">>, {[{<<"min_time">>, 10000}]}}
+            ]}
         ]}
-    ]}
+    ]}}
 ]}.
 
