This will fix the issue of ./rebar generate not working but the release build does not work in general.  I think it has to do with the "distributed" versions not working.  I will need to fix that up ASAP but I will move forward with the hope that these too issues are related.
Fixed issue: https://github.com/cjimison/barrage/issues/32

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -7,6 +7,12 @@
          kernel,
          stdlib,
          sasl,
+         crypto,
+         public_key,
+         ssl,
+         inets,
+         ranch,
+         cowboy,
          barrage
         ]},
        {rel, "start_clean", "",
@@ -24,6 +30,14 @@
        {app, sasl,   [{incl_cond, include}]},
        {app, stdlib, [{incl_cond, include}]},
        {app, kernel, [{incl_cond, include}]},
+       {app, crypto, [{incl_cond, include}]},
+       {app, public_key, [{incl_cond, include}]},
+       {app, ssl, [{incl_cond, include}]},
+       {app, inets, [{incl_cond, include}]},
+       {app, jiffy, [{incl_cond, include}, {lib_dir, "../deps/jiffy"}]},
+       {app, mimetypes, [{incl_cond, include}, {lib_dir, "../deps/mimetypes"}]},
+       {app, ranch, [{incl_cond, include}, {lib_dir, "../deps/ranch"}]},
+       {app, cowboy, [{incl_cond, include}, {lib_dir, "../deps/cowboy"}]},
        {app, barrage, [{incl_cond, include}, {lib_dir, ".."}]}
       ]}.
 
