--- a/rebar.config
+++ b/rebar.config
@@ -2,5 +2,6 @@
 {deps, [
         {jiffy, "", {git, "git://github.com/davisp/jiffy.git", {branch, "master"}}},
         {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", "master"}},
-        {mimetypes, ".*", {git, "git://github.com/spawngrid/mimetypes.git", "master"}}
+        {mimetypes, ".*", {git, "git://github.com/spawngrid/mimetypes.git", "master"}},
+        {websocket_client, ".*", {git, "git://github.com/jeremyong/websocket_client.git", "master"}}
        ]}.
