Added another JSON editor tool (tool2) and reorganized the original JSON editor tool (tool) - comparing editor tools to see which one fits our need.

--- a/relx.config
+++ b/relx.config
@@ -24,16 +24,16 @@
     % Node base Applications
     general,
     commander,
-    site,
+    site
     
     % Debugging applications
-    eper,
-    recon,
-    tools,
-    wx,
-    observer,
-    runtime_tools,
-    webtool,
-    appmon,
-    debugger
+    %eper,
+    %recon,
+    %tools,
+    %wx,
+    %observer,
+    %runtime_tools,
+    %webtool,
+    %appmon,
+    %debugger
 ]}.
