--- a/relx.config
+++ b/relx.config
@@ -24,16 +24,16 @@
     % Node base Applications
     general,
     commander,
-    site
+    site,
     
     % Debugging applications
     %eper,
     %recon,
-    %tools,
-    %wx,
-    %observer,
-    %runtime_tools,
-    %webtool,
-    %appmon,
-    %debugger
+    tools,
+    wx,
+    observer,
+    runtime_tools,
+    webtool,
+    appmon,
+    debugger
 ]}.
