Updated to removed unused libs

--- a/rebar.config
+++ b/rebar.config
@@ -8,8 +8,8 @@
     {lager, ".*", {git, "https://github.com/basho/lager.git", {branch, "master"}}},
     {gproc, ".*", {git, "https://github.com/uwiger/gproc.git", {branch, "master"}}},
     {bcrypt, ".*", {git, "https://github.com/opscode/erlang-bcrypt.git", {branch, "master"}}}, 
-    {eper, ".*", {git, "https://github.com/massemanet/eper.git", {branch, "master"}}},
-    {recon, ".*", {git, "https://github.com/ferd/recon.git", {branch, "master"}}},
+    %{eper, ".*", {git, "https://github.com/massemanet/eper.git", {branch, "master"}}},
+    %{recon, ".*", {git, "https://github.com/ferd/recon.git", {branch, "master"}}},
     {jiffy, "", {git, "git://github.com/davisp/jiffy.git", {branch, "master"}}},
     {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", "master"}},
     {mimetypes, ".*", {git, "git://github.com/spawngrid/mimetypes.git", "master"}},
