Updating to latest cowboy and rolling back the header/body stuff because there is a bug.

--- a/rebar.config
+++ b/rebar.config
@@ -8,10 +8,10 @@
     {lager, ".*", {git, "https://github.com/basho/lager.git", {branch, "master"}}},
     {gproc, ".*", {git, "https://github.com/uwiger/gproc.git", {branch, "master"}}},
     {bcrypt, ".*", {git, "https://github.com/opscode/erlang-bcrypt.git", {branch, "master"}}}, 
-    %{eper, ".*", {git, "https://github.com/massemanet/eper.git", {branch, "master"}}},
-    %{recon, ".*", {git, "https://github.com/ferd/recon.git", {branch, "master"}}},
+    %{eper, ".*", {git, "https://github.com/cjimison/eper.git", {branch, "master"}}},
+    {recon, ".*", {git, "https://github.com/ferd/recon.git", {branch, "master"}}},
     {jiffy, "", {git, "git://github.com/davisp/jiffy.git", {branch, "master"}}},
-    {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", "master"}},
+    {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", {branch, "master"}}},
     {mimetypes, ".*", {git, "git://github.com/spawngrid/mimetypes.git", "master"}},
     {websocket_client, ".*", {git, "git://github.com/jeremyong/websocket_client.git", "master"}},
     {uuid, ".*", {git, "https://github.com/avtobiff/erlang-uuid.git", {branch, "master"}}}
